fix slideshow strange spacing at the bottom
remove li disc stylings from pages.scss

--- a/sites/all/themes/teiazen/sass/pages.scss
+++ b/sites/all/themes/teiazen/sass/pages.scss
@@ -218,10 +218,6 @@ span.field-label { /* The inline field label used by the Fences module */
 .feed-icon { /* The link to the RSS or Atom feed for the current list of content */
 }
 
-li {
-  list-style: disc;
-}
-
 .more-link { /* Aggregator, blog, and forum more link */
   a, a:active, a:visited {
     text-decoration: none;
